# hornet

./: .gitignore  backup.py  backup_face.py  channel_test.py  face_rec-webcam.py  face_rec.py  gamepad.py  main.py  normal.py  pyproject.toml  try.py
