[project]
name = "hornet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-pca9685>=1.0.1",
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "imutils>=0.5.4",
    "opencv-python>=4.12.0.88",
    "pip>=25.3",
    "rpi-gpio>=0.7.1",
    "setuptools>=80.9.0",
]
